--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                             <th>Phone</th>
                             <th>Email</th>
                             <th>Address</th>
+                            <th>Action</th>
                         </tr>
                         </thead>
                         <tbody id="customer_tbody">
@@ -239,6 +240,7 @@
                             <th>Quantity</th>
                             <th>Barcode</th>
                             <th>Description</th>
+                            <th>Action</th>
                         </tr>
                         </thead>
                         <tbody id="store_tbody">
