update order form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                     <a id="order-btn" class="nav-link" href="#order_content"><i class="bi bi-receipt"></i> Orders</a>
                 </li>
             </ul>
-        </div>
+            <button class="btn btn-outline-danger" id="logOut-btn">
+                <i class="bi bi-box-arrow-right"></i> Log Out
+            </button>        </div>
     </div>
 </nav>
 
